! Fixed layout bug in 'ticket fields showing under description' ! First attempt at getting ticket fields to save into tickets. Appears to work for both new and edited tickets. To do: make it work on replies, appropriate logging of changes. Note this change (masses of it) is backwards incompatible with existing custom fields, in two different ways and the tables that control it should be removed before installing this update (specifically, the nature of the primary index in smf_helpdesk_custom_fields_values is different and the storage usage in smf_helpdesk_custom_fields is slightly different for multiple choice items)

--- a/css/helpdesk.css
+++ b/css/helpdesk.css
@@ -152,7 +152,6 @@ h3.ticketheader img
 .shd_additional_details
 {
 	overflow: auto;
-	width: 20%;
 	float: left;
 }
 .shd_ticket_side_column ul
